tensorflow/1.12/api_docs/python/tf/debugging.md
<div itemscope itemtype="http://developers.google.com/ReferenceObject">
<meta itemprop="name" content="tf.debugging" />
<meta itemprop="path" content="Stable" />
</div>

# Module: tf.debugging



Defined in [`tensorflow/_api/v1/debugging/__init__.py`](/code/stable/tensorflow/_api/v1/debugging/__init__.py).

Public API for tf.debugging namespace.

## Functions

[`Assert(...)`](../tf/debugging/Assert.md): Asserts that the given condition is true.

[`assert_all_finite(...)`](../tf/debugging/assert_all_finite.md): Assert that the tensor does not contain any NaN's or Inf's.

[`assert_equal(...)`](../tf/debugging/assert_equal.md): Assert the condition `x == y` holds element-wise.

[`assert_greater(...)`](../tf/debugging/assert_greater.md): Assert the condition `x > y` holds element-wise.

[`assert_greater_equal(...)`](../tf/debugging/assert_greater_equal.md): Assert the condition `x >= y` holds element-wise.

[`assert_integer(...)`](../tf/debugging/assert_integer.md): Assert that `x` is of integer dtype.

[`assert_less(...)`](../tf/debugging/assert_less.md): Assert the condition `x < y` holds element-wise.

[`assert_less_equal(...)`](../tf/debugging/assert_less_equal.md): Assert the condition `x <= y` holds element-wise.

[`assert_near(...)`](../tf/debugging/assert_near.md): Assert the condition `x` and `y` are close element-wise.

[`assert_negative(...)`](../tf/debugging/assert_negative.md): Assert the condition `x < 0` holds element-wise.

[`assert_non_negative(...)`](../tf/debugging/assert_non_negative.md): Assert the condition `x >= 0` holds element-wise.

[`assert_non_positive(...)`](../tf/debugging/assert_non_positive.md): Assert the condition `x <= 0` holds element-wise.

[`assert_none_equal(...)`](../tf/debugging/assert_none_equal.md): Assert the condition `x != y` holds for all elements.

[`assert_positive(...)`](../tf/debugging/assert_positive.md): Assert the condition `x > 0` holds element-wise.

[`assert_proper_iterable(...)`](../tf/debugging/assert_proper_iterable.md): Static assert that values is a "proper" iterable.

[`assert_rank(...)`](../tf/debugging/assert_rank.md): Assert `x` has rank equal to `rank`.

[`assert_rank_at_least(...)`](../tf/debugging/assert_rank_at_least.md): Assert `x` has rank equal to `rank` or higher.

[`assert_rank_in(...)`](../tf/debugging/assert_rank_in.md): Assert `x` has rank in `ranks`.

[`assert_same_float_dtype(...)`](../tf/debugging/assert_same_float_dtype.md): Validate and return float type based on `tensors` and `dtype`.

[`assert_scalar(...)`](../tf/debugging/assert_scalar.md)

[`assert_type(...)`](../tf/debugging/assert_type.md): Statically asserts that the given `Tensor` is of the specified type.

[`check_numerics(...)`](../tf/debugging/check_numerics.md): Checks a tensor for NaN and Inf values.

[`is_finite(...)`](../tf/debugging/is_finite.md): Returns which elements of x are finite.

[`is_inf(...)`](../tf/debugging/is_inf.md): Returns which elements of x are Inf.

[`is_nan(...)`](../tf/debugging/is_nan.md): Returns which elements of x are NaN.

[`is_non_decreasing(...)`](../tf/debugging/is_non_decreasing.md): Returns `True` if `x` is non-decreasing.

[`is_numeric_tensor(...)`](../tf/debugging/is_numeric_tensor.md)

[`is_strictly_increasing(...)`](../tf/debugging/is_strictly_increasing.md): Returns `True` if `x` is strictly increasing.

